--- a/assignment_1.ipynb
+++ b/assignment_1.ipynb
@@ -82,6 +82,93 @@
     "\n",
     "print(result)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "362c013d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[1, 2, 3, 4, 5, 6, 7, 8]\n",
+      "[1, 2, 3, 4, 5, 6, 7]\n",
+      "[1, 2, 3, 4, 5, 6]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4]\n",
+      "[1, 2, 3]\n",
+      "[1, 2]\n",
+      "[1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Keep removing elements from a list one by one and print the list each time, until it becomes empty\n",
+    "numbers = list(range(1, 10))\n",
+    "while numbers:\n",
+    "    print(numbers)\n",
+    "    numbers.pop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "489ac8c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "25.0\n",
+      "12.5\n",
+      "6.25\n",
+      "3.125\n",
+      "1.5625\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Start from a number and keep dividing it by 2 until it becomes less than 1. Print each value.\n",
+    "num = 50\n",
+    "while num >= 1:\n",
+    "    print(num)\n",
+    "    num /= 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "bce10d1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current total: 1.0\n",
+      "Current total: 21.0\n",
+      "Current total: 45.0\n",
+      "Current total: 102.0\n",
+      "Total exceeded 100. Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Ask the user to enter numbers until the total sum crosses 100.\n",
+    "total = 0\n",
+    "\n",
+    "while total <= 100:\n",
+    "    number = float(input(\"Enter a number: \"))\n",
+    "    total += number\n",
+    "    print(\"Current total:\", total)\n",
+    "\n",
+    "print(\"Total exceeded 100. Done!\")\n"
+   ]
   }
  ],
  "metadata": {
